Hide decoration on touch & ThemeBudds fixed, not absolute to work better on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -98,3 +98,8 @@
   mask-repeat: no-repeat;
 }
 
+@media (pointer: coarse) {
+  .touchHideCustom {
+    display: none;
+  }
+}
